tests/src/frontend/typechecking/invalid/baseclass_extend.sk
base class X
trait Y extends X
